--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -7,4 +7,8 @@
   bottom: 0;
   background: linear-gradient(160deg, yellow, orange);
 }
+
+#footer-container h1 {
+  margin-left: 7vw;
+}
 /*# sourceMappingURL=footer.css.map */
