--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -2,6 +2,12 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100vw;
   position: absolute;
   bottom: 0;
@@ -10,5 +16,20 @@
 
 #footer-container h1 {
   margin-left: 7vw;
+}
+
+.secondary-btn {
+  font-weight: 700;
+  font-size: 0.8em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.66em 2em;
+  color: #333;
+  border: solid 2px #333;
+}
+
+#footer-btn {
+  margin-right: 7vw;
 }
 /*# sourceMappingURL=footer.css.map */
