Updated Navbar and HomePage Components

--- a/src/components/HomePage/homepage.css
+++ b/src/components/HomePage/homepage.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=homepage.css.map */
+#homepage-container {
+  margin-top: 9vh;
+}
+/*# sourceMappingURL=homepage.css.map */
