--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -24,7 +24,7 @@
   display: flex;
   width: 100vw;
   background: #444;
-  position: relative;
+  position: fixed;
   top: 0;
   max-height: 8vh;
   align-items: center;
@@ -35,5 +35,33 @@
     span {
       color: orange;
     }
+  }
+  // #navbar-search-form {
+  //   display: none;
+  // }
+  #navbar-search-input {
+    &::placeholder {
+      color: #999;
+    }
+    color: #fefefe;
+    background: #666;
+    padding: 0.33em 0.66em;
+    min-width: 100%;
+    outline: none;
+    border: none;
+    font-family: raleway;
+    border-radius: 0.33em 0em 0em 0.33em;
+  }
+  #navbar-search-form-label {
+    display: flex;
+    flex-direction: row;
+  }
+  #navbar-search-form-btn {
+    cursor: pointer;
+    color: #999;
+    background: #666;
+    border: transparent;
+    border-radius: 0em 0.33em 0.33em 0em;
+    border-left: solid 2px #444;
   }
 }
