--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,3 +1,4 @@
+@import "../../main";
 #footer-container {
   h1 {
     margin-left: 7vw;
@@ -8,15 +9,25 @@
   width: 100vw;
   position: absolute;
   bottom: 0;
-  background: linear-gradient(160deg, yellow, orange);
+  background: $primary-gradient;
+  color: $dark-text;
+}
+p {
+  color: $dark-text;
 }
 .secondary-btn {
+  text-align: center;
   font-weight: 700;
   font-size: 0.8em;
   display: flex;
   padding: 0.66em 2em;
   color: #333;
   border: solid 2px #333;
+  border-bottom: solid 5px #333;
+  &:hover {
+    border-bottom: solid 2px #333;
+    margin-bottom: -3px;
+  }
 }
 #footer-btn {
   margin-right: 7vw;
