--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,3 +1,4 @@
+@import "../../_main";
 #nav-list {
   list-style: none;
   display: flex;
@@ -12,8 +13,8 @@
     align-items: center;
     .primary-btn {
       padding: 0.66em 2em;
-      background: linear-gradient(160deg, yellow, orange);
-      color: #333;
+      background: $primary-gradient;
+      color: #444;
     }
     a {
       cursor: pointer;
