--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -8,7 +8,7 @@
     font-size: 0.8em;
     font-weight: 600;
     margin-left: 2em;
-    color: yellow;
+    color: $light-text;
     display: flex;
     align-items: center;
     .primary-btn {
