--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -64,7 +64,7 @@
 #spinner-container #spinner {
   width: 2em;
   height: 2em;
-  border: solid 5px #888;
+  border: solid 5px #e6e6e6;
   border-top: solid 5px #444;
   border-radius: 5em;
   -webkit-animation: spinning 0.6s linear infinite;
