Updated Navbar styles and media queries

--- a/src/_main.scss
+++ b/src/_main.scss
@@ -1,3 +1,18 @@
 $primary-gradient: linear-gradient(160deg, yellow, orange) !default;
 $light-text: yellow;
 $dark-text: #444;
+
+$tablet-width: 768px;
+$desktop-width: 1024px;
+
+@mixin tablet {
+  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
