--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -31,6 +31,7 @@
   align-items: center;
   justify-content: space-between;
   #logo {
+    font-size: 1.66em;
     margin-left: 7vw;
     color: #888;
     span {
@@ -40,29 +41,41 @@
   // #navbar-search-form {
   //   display: none;
   // }
-  #navbar-search-input {
-    &::placeholder {
-      color: #999;
+  #navbar-search-form {
+    display: none;
+    @include tablet {
+      display: flex;
     }
-    color: #fefefe;
-    background: #666;
-    padding: 0.33em 0.66em;
-    min-width: 100%;
-    outline: none;
-    border: none;
-    font-family: raleway;
-    border-radius: 0.33em 0em 0em 0.33em;
-  }
-  #navbar-search-form-label {
-    display: flex;
-    flex-direction: row;
-  }
-  #navbar-search-form-btn {
-    cursor: pointer;
-    color: #999;
-    background: #666;
-    border: transparent;
-    border-radius: 0em 0.33em 0.33em 0em;
-    border-left: solid 2px #444;
+    @include desktop {
+      display: flex;
+    }
+
+    #navbar-search-input {
+      margin: 0 auto;
+      color: #fefefe;
+      background: #666;
+      padding: 0.33em 0.66em;
+      min-width: 100%;
+      width: 100%;
+      outline: none;
+      border: none;
+      font-family: raleway;
+      border-radius: 0.33em 0em 0em 0.33em;
+      &::placeholder {
+        color: #999;
+      }
+    }
+    #navbar-search-form-label {
+      display: flex;
+      flex-direction: row;
+    }
+    #navbar-search-form-btn {
+      cursor: pointer;
+      color: #999;
+      background: #666;
+      border: transparent;
+      border-radius: 0em 0.33em 0.33em 0em;
+      border-left: solid 2px #444;
+    }
   }
 }
