--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -51,6 +51,8 @@
     }
 
     #navbar-search-input {
+      display: flex;
+      justify-content: space-between;
       margin: 0 auto;
       color: #fefefe;
       background: #666;
